<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_launcher_foreground"/>
            <TextView
                android:id="@+id/city_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/text_city"/>
        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_margin="10dp"
            >
            <TextView
                android:id="@+id/date_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/texte_date"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:background="@color/black"
                android:textAlignment="center"
                android:padding="5dp"
                />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/weather_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_weather"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_temp"
            android:textSize="150sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_summary_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title_summary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_summary"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@color/black">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:id="@+id/wind_speed_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/text_wind_speed"/>
                    <TextView
                        android:id="@+id/wind_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="@string/text_wind"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:id="@+id/humidity_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/text_humidity_value"/>
                    <TextView
                        android:id="@+id/humidity_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="@string/text_humidity"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:id="@+id/visibility_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/text_visibility_value"/>
                    <TextView
                        android:id="@+id/visibility_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="@string/text_visibility"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/text_fortcast_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="21°"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="21 Juin"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="21°"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="21 Juin"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="21°"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="21 Juin"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/yellow">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="21°"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_launcher_foreground"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="21 Juin"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>